force-app/main/default/objects/DataDesk_Template__c/DataDesk_Template__c.object-meta.xml
<CustomObject>
    <label>DataDesk Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataDesk Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>