force-app/main/default/objects/DataDesk_Template__c/fields/Field_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_JSON__c</fullName>
    <label>Field JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>