force-app/main/default/objects/DataDesk_Template__c/fields/Layout_JSON__c.field-meta.xml
<CustomField>
    <fullName>Layout_JSON__c</fullName>
    <label>Layout JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>