force-app/main/default/objects/DataDesk_Template__c/fields/Use_Batch_Processing__c.field-meta.xml
<CustomField>
    <fullName>Use_Batch_Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Batch Processing</label>
    <type>Checkbox</type>
</CustomField>