force-app/main/default/objects/DataDesk_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Record_Type_API_Name__c</columns>
    <columns>Record_Count__c</columns>
    <columns>Field_JSON__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>